--- a/src/components/dashboard-page/Token/PriceChart/style.scss
+++ b/src/components/dashboard-page/Token/PriceChart/style.scss
@@ -2,6 +2,7 @@
 
 .custom-axis-tick {
   @include t100;
+
   color: $dashboard-charts-base-tick-color;
   fill: $dashboard-charts-base-tick-color;
   font-feature-settings: $dashboard-font-feature-settings;
@@ -9,18 +10,20 @@
 
 .custom-dot-text {
   @include t100;
-  fill: #ffffff;
+
+  fill: #fff;
   font-feature-settings: $dashboard-font-feature-settings;
 }
 
 .custom-cursor-text {
   @include t100;
+
   font-feature-settings: $dashboard-font-feature-settings;
 }
 
 .custom-tooltip {
-  padding: 8px;
   width: 225px;
+  padding: 8px;
   background-color: $dashboard-charts-custom-tooltip-background-color;
   border-radius: 8px;
 
@@ -29,10 +32,10 @@
   }
 
   &__header {
-    margin-bottom: 12px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    margin-bottom: 12px;
   }
 
   &__payload-list {
@@ -42,10 +45,10 @@
   }
 
   &__payload-list-item {
-    margin: 0;
-    padding: 0;
     display: flex;
     align-items: center;
+    margin: 0;
+    padding: 0;
 
     &:first-of-type {
       margin-bottom: 8px;
@@ -60,13 +63,15 @@
 
   &__text {
     @include t100;
+
+    margin-right: 4px;
     color: $dashboard-charts-base-tick-color;
     font-feature-settings: $dashboard-font-feature-settings;
-    margin-right: 4px;
   }
 
   &__accent-text {
     @include t100;
+
     color: $dashboard-content-base-text-color;
     font-feature-settings: $dashboard-font-feature-settings;
   }
