--- a/src/components/dashboard-page/Token/MintingChart/style.scss
+++ b/src/components/dashboard-page/Token/MintingChart/style.scss
@@ -2,6 +2,7 @@
 
 .dashboard-token-mintning-chart-custom-label {
   @include t200;
+
   font-size: 12px;
   fill: $dashboard-content-base-text-color;
   font-feature-settings: $dashboard-font-feature-settings;
@@ -12,16 +13,15 @@
 }
 
 .dim {
-  opacity: 0.4;
+  opacity: .4;
 }
 
 .dashboard-token-mintning-chart-legend {
   &__cells-list {
-    padding: 0;
-    list-style: none;
-
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
+    list-style: none;
     gap: 24px;
   }
 
@@ -45,6 +45,7 @@
 
   &__cell-label {
     @include t200;
+
     color: $dashboard-content-base-text-color;
     font-feature-settings: $dashboard-font-feature-settings;
   }
