Increase comparison table text size, add scroll fade

--- a/src/components/dashboard-page/Comparison/Positioning/style.scss
+++ b/src/components/dashboard-page/Comparison/Positioning/style.scss
@@ -3,13 +3,34 @@
 .dashboard-comparison-positioning {
   @include dashboard-widget;
 
-  &__table-wrapper {
+  position: relative;
+
+  &__scroll-fade {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 98px;
+    height: 100%;
+    background: linear-gradient(270deg, #000 26.56%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0;
+    transition: all .3s ease-in-out;
+
+    &--show {
+      opacity: 1;
+    }
+  }
+
+  &__section-wrapper {
     overflow-x: auto;
     scrollbar-width: none;
 
     &::-webkit-scrollbar {
       display: none;
     }
+  }
+
+  &__table-wrapper {
+    min-width: 1312px;
   }
 
   &__table {
@@ -38,9 +59,10 @@
   }
 
   &__table-head-cell {
-    @include t200;
+    @include t400;
 
     padding: 12px 4px;
+    font-weight: 600;
     text-align: start;
   }
 
@@ -53,9 +75,11 @@
       }
 
       & > td > div {
-        font-size: 10px;
-        line-height: 1.6;
-        letter-spacing: .1px;
+        @include t300;
+
+        // font-size: 10px;
+        // line-height: 1.6;
+        // letter-spacing: .1px;
       }
 
       @-moz-document url-prefix() {
@@ -67,7 +91,7 @@
   }
 
   &__table-body-cell {
-    @include t200;
+    @include t400;
 
     padding: 16px 4px;
     vertical-align: bottom;
@@ -80,5 +104,15 @@
     padding: 4px;
     background-color: #bbd9f621;
     border-radius: 4px;
+  }
+
+  @media (max-width: 768px) {
+    &__table-wrapper {
+      min-width: 1344px;
+    }
+
+    &__scroll-fade {
+      width: 66px;
+    }
   }
 }
