Implement persistent state to track whether banner should be open, finalize styling and add RWD

--- a/src/components/OneKeyBanner/style.scss
+++ b/src/components/OneKeyBanner/style.scss
@@ -44,7 +44,6 @@
       height: 40px;
       font-weight: 600;
       letter-spacing: .005em;
-      // padding: 10px 14px;
       color: #f4f6f8;
       background-color: rgba(188, 213, 250, .08);
       border: 1px solid rgba(187, 217, 246, .13);
@@ -63,6 +62,10 @@
       margin-left: 18px;
       color: #f4f6f8;
       cursor: pointer;
+
+      &--mobile {
+        display: none;
+      }
     }
   }
 
@@ -75,5 +78,64 @@
     z-index: 0;
     width: 493px;
     margin: auto;
+  }
+
+  @media (max-width: 1440px) {
+    &__background {
+      top: 40px;
+      left: 33%;
+      width: 347px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    &__background {
+      left: 22%;
+      opacity: .15;
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    height: auto;
+
+    &__content {
+      padding-right: 35px;
+
+      &__title {
+        @include t300;
+
+        font-weight: 600;
+      }
+    }
+
+    &__controls {
+      margin-top: 16px;
+
+      &__close {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+      }
+    }
+
+    &__background {
+      top: 0;
+    }
+  }
+
+  @media (max-width: 550px) {
+    &__background {
+      left: 35px;
+      min-width: 380px;
+    }
+  }
+
+  @media (max-width: 400px) {
+    &__background {
+      top: 65px;
+      left: -95px;
+      min-width: 550px;
+    }
   }
 }
